2011-06-12  Paul Smith  <psmith@gnu.org>

	* read.c (parse_file_seq): Move the check for empty members out of
	the loop so we can go to the next member properly.
	Another fix for Savannah bug #30612.

	* config.h-vms.template: Newer versions of VMS have strncasecmp()
	Patch provided by: Hartmut Becker <becker.ismaning@freenet.de>

2011-05-07  Paul Smith  <psmith@gnu.org>

	* expand.c (variable_append): Add a LOCAL argument to track
	whether this is the first invocation or not.  If it's not and
	private_var is set, then skip this variable and try the next one.
	Fixes Savannah bug #32872.

	* read.c (parse_file_seq): Ensure existence checks use glob().

2011-05-07  Eli Zaretskii  <eliz@gnu.org>

	* job.c (construct_command_argv_internal): Don't assume shellflags
	is always non-NULL.  Escape-protect characters special to the
	shell when copying the value of SHELL into new_line.  Fixes
	Savannah bug #23922.

2011-05-02  Paul Smith  <psmith@gnu.org>

	* doc/make.texi (Special Variables): Add documentation for the new
	words in .FEATURES.  Fixes Savannah bug #32058.
	(Flavor Function): Rewrite the section on the flavor function.
	Fixes Savannah bug #31582.

	* function.c (func_sort): Use the same algorithm to count the
	number of words we will get after the split, as we use to split.
	Based on a patch from Matthias Hopf.  Fixes Savannah bug #33125.

	* make.h: Make global variable stack_limit extern.
	Fixes Savannah bug #32753.

2011-05-01  Paul Smith  <psmith@gnu.org>

	* read.c (parse_file_seq): Don't try to invoke glob() unless there
	are potential wildcard characters in the filename.  Performance
	enhancement suggested by Michael Meeks <michael.meeks@novell.com>

2011-04-29 Boris Kolpackov  <boris@codesynthesis.com>

	* read.c (eval_makefile): Delay caching of the file name until after
	all the expansions and searches.

2011-04-17  David A. Wheeler  <dwheeler@dwheeler.com>

	* doc/make.texi (Reading Makefiles): Document "!=".
	(Setting): Ditto.
	(Features): Ditto.